add custom class for Google Map Embed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,3 +22,9 @@
 .btn-color {
   background: var(--btn-color);
 }
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 500px;
+  width: 600px;
+}
